<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Group Message</string>
    <string name="action_settings">Settings</string>
	<string name="title_activity_view_message">View Message</string>
    <string name="activity_create_message_label">Send Group Message</string>
    <string name="queue_message_label">Queue Message</string>
    <string name="confirm_send_message">Are you sure you want to send this message?</string>
    <string name="confirm_send_message_title">Confirm Sending</string>
    <string name="send_label">Yes, Send</string>
    <string name="dont_send">Dont Send</string>
    <string name="pref_sms_sending_config_title">SMS sending configuration</string>
    <string name="pref_dispatch_delay_title">Single SMS Delay</string>
    <string name="pref_dispatch_delay_summary">Duration to wait before sending every SMS</string>
    <string name="pref_batch_dispatch_delay_title">Batch SMS Delay</string>
    <string name="pref_batch_dispatch_delay_summary">Duration to wait before sending every batch of SMS</string>
    <string name="pref_dispatch_pickup_size_title">Batch SMS Size</string>
    <string name="pref_dispatch_pickup_size_summary">Batch SMS size to attempt sending after every Batch SMS Delay</string>
    <string name="cta_group_messase">Tap on the button on the bottom right to send a Group Message (SMS)</string>
    <string name="activity_view_message_label">View Group Message</string>
    <string name="action_queue_failed">Queue Failed Messages</string>
    <string name="action_delete_message">Delete Message</string>
    <string name="delete_message">Yes, Delete</string>
    <string name="confirm_delete_message_title">Confirm Delete</string>
    <string name="confirm_delete_message_message">Are you sure you want to delete this message?</string>
    <string name="dont_delete">Don\'t Delete</string>
    <string name="app_on_title">Turn on message sending</string>
    <string name="app_on_summary">Toggle on and off message sending</string>
    <string name="next_dispatch_pickup_time_label">Next batch of messages will be sent on :</string>
    <string name="app_off_label">Message sending has been disabled</string>
    <string name="message_label">Complete Message</string>
    <string name="delivered_label">DELIVERED</string>
    <string name="no_delivered_label">NOT DELIVERED</string>
    <string name="sent_label">SENT</string>
    <string name="failed_label">FAILED</string>
    <string name="pending_label">PENDING</string>
    <string name="queued_label">QUEUED</string>
    <string name="saving_message_label">Saving message</string>
    <string name="mobile_numbers_only_title">Mobile only</string>
    <string name="mobile_numbers_only_title_summary">Send message to mobile numbers only</string>
    <string name="version_label">Version</string>
    <string name="current_version">20.0</string>
    <string name="delivery_reports_title">Delivery Reports</string>
    <string name="delivery_reports_title_summary">Use delivery reports to track messages. Disabling this also disables delivery stats.</string>
    <string name="request_permissions_info">Group Message needs to access your Contacts and SMS inorder to do its basic functions. Contact access allows Group Message to read contacts and groups. SMS access allows Group Message to send the actual text messages (SMS). Please grant Group Message the required permissions.</string>
    <string name="grant_permission_label">Grant Permissions</string>
    <string name="hint_text">Message to send to the Group</string>
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="privacy_policy_summary">Please read our privacy policy</string>
    <string name="pref_app_info">Application Information</string>

</resources>
