<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_sms_sending_config_title"
        android:key="pref_key_storage_settings">
        <ListPreference
            android:key="dispatch.delay"
            android:summary="@string/pref_dispatch_delay_summary"
            android:title="@string/pref_dispatch_delay_title"
            android:dialogTitle="@string/pref_dispatch_delay_title"
            android:entries="@array/pref_dispatch_delay_entries_labels"
            android:entryValues="@array/pref_dispatch_delay_entries_values"
            android:defaultValue="7" />
        <ListPreference
            android:key="batch.dispatch.delay"
            android:summary="@string/pref_batch_dispatch_delay_summary"
            android:title="@string/pref_batch_dispatch_delay_title"
            android:dialogTitle="@string/pref_batch_dispatch_delay_title"
            android:entries="@array/pref_batch_dispatch_delay_entries_labels"
            android:entryValues="@array/pref_batch_dispatch_delay_entries_values"
            android:defaultValue="60" />
        <ListPreference
            android:key="dispatch.pickup.size"
            android:summary="@string/pref_dispatch_pickup_size_summary"
            android:title="@string/pref_dispatch_pickup_size_title"
            android:dialogTitle="@string/pref_dispatch_pickup_size_title"
            android:entries="@array/pref_dispatch_pickup_size_entries_labels"
            android:entryValues="@array/pref_dispatch_pickup_size_entries_values"
            android:defaultValue="10" />
    </PreferenceCategory>
</PreferenceScreen>