<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:padding="5pt"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="Large Text"
		android:id="@+id/currentGroupNameTextView"/>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:text="Medium Text"
		android:layout_marginBottom="5pt"
		android:id="@+id/currentMessageTextView"/>
	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#c2c2c2"
		android:padding="3pt"
		android:layout_marginBottom="5pt">
		<TableRow
			android:layout_width="fill_parent">
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_weight="0.25"
				android:orientation="vertical">
				<TextView
					android:layout_width="fill_parent"
					android:gravity="center"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="3"
					android:id="@+id/sent_dispatch_count"/>
				<TextView
					android:layout_width="fill_parent"
					android:gravity="center"
					android:layout_height="wrap_content"
					android:text="@string/sent_label"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_weight="0.25"
				android:orientation="vertical">
				<TextView
					android:layout_width="fill_parent"
					android:gravity="center"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="3"
					android:id="@+id/failed_dispatch_count"/>
				<TextView
					android:layout_width="fill_parent"
					android:gravity="center"
					android:layout_height="wrap_content"
					android:text="@string/failed_label"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_weight="0.25"
				android:orientation="vertical">
				<TextView
					android:layout_width="fill_parent"
					android:gravity="center"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="3"
					android:id="@+id/pending_dispatch_count"/>
				<TextView
					android:layout_width="fill_parent"
					android:gravity="center"
					android:layout_height="wrap_content"
					android:text="@string/pending_label"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_weight="0.25"
				android:orientation="vertical">
				<TextView
					android:layout_width="fill_parent"
					android:gravity="center"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="3"
					android:id="@+id/queued_dispatch_count"/>
				<TextView
					android:layout_width="fill_parent"
					android:gravity="center"
					android:layout_height="wrap_content"
					android:text="@string/queued_label"/>
			</LinearLayout>
		</TableRow>
	</TableLayout>
	<ListView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/dispatchListView"/>
</LinearLayout>